tests/functional/lang/eval-fail-derivationStrict-5.err.exp
error:
       … while calling the 'derivationStrict' builtin
         at /pwd/lang/eval-fail-derivationStrict-5.nix:1:1:
            1| builtins.derivationStrict {
             | ^
            2|   name = "foo";

       … while evaluating derivation 'foo'
         whose name attribute is located at /pwd/lang/eval-fail-derivationStrict-5.nix:2:3

       … while evaluating the `__structuredAttrs` attribute passed to builtins.derivationStrict

       error: expected a Boolean but found an integer: 15
